修改数据库连接，并创建新的查询页面，验证日志、映射文件等

--- a/src/main/resources/templates/channel.html
+++ b/src/main/resources/templates/channel.html
@@ -7,12 +7,12 @@
 <body>
 <table>
     <tr>
-        <td>客户编号</td>
+        <td>频道编号</td>
         <td>客户姓名</td>
     </tr>
-    <tr th:each="customer : ${list}">
-        <td th:text="${customer.customerCode}"></td>
-        <td th:text="${customer.customerName}"></td>
+    <tr th:each="channel : ${list}">
+        <td th:text="${channel.channelCode}"></td>
+        <td th:text="${channel.channelInfo}"></td>
     </tr>
 </table>
 </body>
